--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fe-monitor-admin-ts",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/admin",
   "dependencies": {
     "@types/react-router": "4.0.20",
     "@types/react-router-dom": "4.2.3",
